--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         </div>
                     </li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#contact" class="logout">Logout</a></li>
+                    <li><a href="sign.html" class="logout">Logout</a></li>
                 </ul>
             </div>
         </div>
