--- a/sign.html
+++ b/sign.html
@@ -655,7 +655,7 @@
         <div class="login-reg-panel">
             <div class="login-info-box">
                 <h2>User</h2>
-                <!-- <p>Login with your id</p> -->post_login
+                <!-- <p>Login with your id</p> -->
                 <label id="label-register" for="log-reg-show">User Login</label>
                 <input type="radio" name="active-log-panel" id="log-reg-show" checked="checked">
             </div>
