--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     }
     
     footer {
-        background: #00c1c1;
+        background: #0071c1;
     }
     
     img.dowloadlink {
@@ -276,7 +276,12 @@
                         <!-- your mega menu starts here! -->
                         <div class="dropdown-menu megaOption dropdown-menu-right container" aria-labelledby="servicesDropdown">
                             <div class="row">
-                                <ul class="col-md-3 megamenu_ul"><a href=""> Pineapple</a>
+                                <ul class="col-md-3 megamenu_ul" style="display: block"><a href=""> Pineapple</a>
+                                    <li><a href="">item1</a></li>
+                                    <li><a href="">item1</a></li>
+                                    <li><a href="">item1</a></li>
+                                </ul>
+                                <!-- <ul class="col-md-3 megamenu_ul"><a href=""> Pineapple</a>
                                     <li>item1</li>
                                     <li>item1</li>
                                     <li>item1</li>
@@ -290,12 +295,7 @@
                                     <li>item1</li>
                                     <li>item1</li>
                                     <li>item1</li>
-                                </ul>
-                                <ul class="col-md-3 megamenu_ul"><a href=""> Pineapple</a>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </div>
                     </li>
@@ -713,7 +713,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #00c1c1;" class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #0071c1;" class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -721,7 +721,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #00c1c1;" class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #0071c1;" class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -729,7 +729,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #00c1c1;" class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #0071c1;" class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -737,7 +737,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #00c1c1;" class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #0071c1;" class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -750,16 +750,8 @@
             </div>
         </div>
     </footer>
-    <footer class="page-footer indigo darken-2 center-on-small-only pt-0 mt-0 ">
+    <footer class="page-footer indigo darken-2 center-on-small-only pt-0 mt-5 ">
         <div class="container ">
-            <div class="row ">
-                <div class="col-md-12 ">
-                    <div class="mb-5 flex-center "><a class="px-3 " href="# "><i class="fa fa-facebook fa-lg white-text "></i></a><a class="px-3 " href="# "><i class="fa fa-twitter fa-lg white-text "></i></a><a class="px-3 " href="# "><i class="fa fa-google-plus
-                                                        fa-lg white-text "></i></a>
-                        <a class="px-3 " href="# "><i class="fa fa-linkedin fa-lg white-text "></i></a>
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="footer-copyright text-center py-3 font-small ">
             <div class="container-fluid ">
