--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     }
     
     footer {
-        background: #0071c1;
+        background: #5a2f51;
     }
     
     img.dowloadlink {
@@ -269,36 +269,7 @@
                     <li class="current"><a href="#intro" class="active">Flight</a></li>
                     <li><a href="#about">Hotel</a></li>
                     <li><a href="#services">Holidys</a></li>
-                    <li class="nav-item px-4 dropdown Holiday">
-                        <!-- first is the link in your navbar -->
-                        <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" aria-haspopup="true" aria-expanded="false">car</a>
-
-                        <!-- your mega menu starts here! -->
-                        <div class="dropdown-menu megaOption dropdown-menu-right container" aria-labelledby="servicesDropdown">
-                            <div class="row">
-                                <ul class="col-md-3 megamenu_ul" style="display: block"><a href=""> Pineapple</a>
-                                    <li><a href="">item1</a></li>
-                                    <li><a href="">item1</a></li>
-                                    <li><a href="">item1</a></li>
-                                </ul>
-                                <!-- <ul class="col-md-3 megamenu_ul"><a href=""> Pineapple</a>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                </ul>
-                                <ul class="col-md-3 megamenu_ul"><a href=""> Pineapple</a>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                </ul>
-                                <ul class="col-md-3 megamenu_ul"><a href=""> Pineapple</a>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                    <li>item1</li>
-                                </ul> -->
-                            </div>
-                        </div>
-                    </li>
+                    <li><a href="#services">car</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="sign.html" class="logout">Logout</a></li>
                 </ul>
@@ -377,8 +348,7 @@
                                     <span class="text multi_city">Multi-City</span>
                                 </label>
                         </div>
-                        <br>
-                        <div id='show-me' class="form">
+                        <div id='show-me' class="form mt-3">
                             <div class="row">
                                 <div class="col-md-4">
                                     <label class="active_lable" for="From">Flying From</label>
@@ -390,7 +360,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <label class="active_lable" for="fname" class="date">Departure Date</label>
-                                    <input id="fname" type="date" class="cool" />
+                                    <input id="fname" type="date" class="cool" style="text-transform: lowercase;" />
                                 </div>
                             </div>
                             <div class="row mb-0 mt-0">
@@ -436,11 +406,11 @@
                                 </div>
                                 <div class="col-md-2">
                                     <label class="active_lable" for="fname" class="date">Departure Date</label>
-                                    <input id="fname" type="date" class="cool" />
+                                    <input id="fname" type="date" class="cool" style="text-transform: lowercase;" />
                                 </div>
                                 <div class="col-md-2">
                                     <label class="active_lable" for="fname" class="date">Arrival Date</label>
-                                    <input id="fname" type="date" class="cool" />
+                                    <input id="fname" type="date" class="cool" style="text-transform: lowercase;" />
                                 </div>
                             </div>
                             <div class="row mb-0 mt-0">
@@ -486,11 +456,11 @@
                                 </div>
                                 <div class="col-md-4">
                                     <label class="active_lable" for="fname" class="date">Departure Date</label>
-                                    <input id="fname" type="date" class="cool" />
+                                    <input id="fname" type="date" class="cool" style="text-transform: lowercase;" />
                                 </div>
                                 <!-- <div class="col-md-2">
                                         <label class="active_lable" for="fname" class="date">Arrival Date</label>
-                                        <input id="fname" type="date" class="cool" />
+                                        <input id="fname" type="date" class="cool" style="text-transform: lowercase;" />
                                     </div> -->
                             </div>
                             <div class="row mb-0 mt-0">
@@ -595,7 +565,7 @@
                 <div class="col-md-12 ">
                     <p class="text " style="font-size: 18px; ">
                         <marquee direction="left ">
-                            <p style="color: #096386 !important ">For flights which have been cancelled, we have protected your booking... Customers who have booked their travel through a travel agent/online portal are requested to connect with the travel agent directly to redeem their credit
+                            <p style="color: #5a2f51 !important ">For flights which have been cancelled, we have protected your booking... Customers who have booked their travel through a travel agent/online portal are requested to connect with the travel agent directly to redeem their credit
                                 note.
                             </p>
                         </marquee>
@@ -713,7 +683,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #0071c1;" class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #5a2f51;" class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -721,7 +691,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #0071c1;" class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #5a2f51;" class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -729,7 +699,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #0071c1;" class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #5a2f51;" class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -737,7 +707,7 @@
                                             <a href="#">
                                                 <span class="fa-stack fa-2x">
                                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                                    <i style="color: #0071c1;" class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                                    <i style="color: #5a2f51;" class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                                                 </span>
                                             </a>
                                         </li>
@@ -782,23 +752,6 @@
     <script src="js/custom.js"></script>
 
     <script>
-        $(".dropdown-toggle").hover(function() {
-            $(".Holiday").addClass("show");
-            $(".megaOption").addClass("show");
-        }, function() {
-            $(".Holiday").removeClass("show");
-            $(".megaOption").removeClass("show");
-        });
-
-        $(".dropdown-menu").hover(function() {
-            $(".Holiday").addClass("show");
-            $(".megaOption").addClass("show");
-        }, function() {
-            $(".Holiday").removeClass("show");
-            $(".megaOption").removeClass("show");
-        });
-
-
         // search box
         $(document).ready(function() {
             $("#watch-me").click(function() {
