--- a/sign.html
+++ b/sign.html
@@ -643,12 +643,7 @@
             </div>
             <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="current"><a href="#intro" class="active">Flight</a></li>
-                    <li><a href="#about">Hotel</a></li>
-                    <li><a href="#services">Holidys</a></li>
-                    <li><a href="#services">car</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#contact" class="logout">Logout</a></li>
+                    <li><a href="#contact" class="logout">Support</a></li>
                 </ul>
             </div>
         </div>
